# nova_pay_demo

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  generate_dataset.sh  run_eval.sh  seed.sh  teardown.sh
backend/: Dockerfile  config.py  ingest.py  main.py  pyproject.toml  rag_chain.py  requirements.txt
backend/evals/: correctness.py  is_correct_eval_prompt.py  off_topic_eval_prompt.py  off_topic_live_prompt.py  run_eval.py  ui_judge_prompt.py
backend/seed/: __main__.py  datasets.py  generate_dataset.py  golden_dataset.json  prompts.py  teardown.py
docs/api/: notifications-api.md  payments-api.md  users-api.md
docs/architecture/: auth-architecture.md  data-pipeline.md  system-overview.md
docs/onboarding/: first-week-checklist.md  local-dev-setup.md  team-structure.md
docs/processes/: code-review-guidelines.md  deployment-process.md  incident-response.md
docs/runbooks/: database-failover.md  high-latency-debugging.md  payments-service-down.md
docs/standards/: api-design-guidelines.md  coding-standards.md
frontend/: Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatInterface.tsx  Header.tsx  MessageBubble.tsx  Sidebar.tsx  SourceCitation.tsx
frontend/src/lib/: api.ts  types.ts
